opam-version: "2.0"
synopsis: "Specification of the Tezos context hash"
description: """\
This package contains the specification of the Tezos context hash
as well as generators of datasets useful to verify that an implemenation
comply with the specificiation."""
maintainer: "Clément Pascutto <clement@pascutto.fr>"
authors: [
  "Clément Pascutto <clement@pascutto.fr>"
  "Mattias Roux <mattias@tarides.com>"
  "Thomas Gazagnaire <thomas@tarides.com>"
]
homepage: "https://github.com/tarides/tezos-context-hash"
doc: "https://tarides.github.io/tezos-context-hash/"
bug-reports: "https://github.com/tarides/tezos-context-hash/issues"
depends: [
  "dune"
  "alcotest"
  "fmt"
  "irmin-pack"
  "ppx_irmin"
  "cmdliner"
  "irmin"
  "yojson"
  "zarith"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install"]
  ["dune" "build" "-p" name "-j" jobs "@runtest" {with-test}]
]
available:[arch = "x86_64"]
dev-repo: "git+https://github.com/tarides/tezos-context-hash.git"
pin-depends: [
  [
    "irmin.dev"
    "git+https://github.com/mirage/irmin.git#5fd54838c5e8eb9bfa4c02170df30698f78b0201"
  ]
  [
    "ppx_irmin.dev"
    "git+https://github.com/mirage/irmin.git#5fd54838c5e8eb9bfa4c02170df30698f78b0201"
  ]
  [
    "irmin-layers.dev"
    "git+https://github.com/mirage/irmin.git#5fd54838c5e8eb9bfa4c02170df30698f78b0201"
  ]
  [
    "irmin-pack.dev"
    "git+https://github.com/mirage/irmin.git#5fd54838c5e8eb9bfa4c02170df30698f78b0201"
  ]
  [
    "index.dev"
    "git+https://github.com/mirage/index.git#97a090c45fe8cf6b8cebda7085de376c551ad3fa"
  ]

]
